--- a/tesla.html
+++ b/tesla.html
@@ -16,7 +16,7 @@
     <header class="header">
     <div class="wrapper-header">
         <img class="logo" src="./static/img/02.png" alt="logo">
-        <nav>
+        <nav class="nav">
             <a class="menu" href="#">Home</a>
             <a class="menu" href="#">Explore</a>
             <a class="menu" href="#">Showroom </a>
@@ -24,12 +24,12 @@
             <a class="menu" href="#">Contact Us</a>
             <a class="menu" href="#">Page</a>
         </nav>
-    <div>
-        <img class="acc" src="./static/img/Image.png" alt="ava">
-        <button class="btn">Add Your Item</button>
-    </div>
+        <div class="btnacc">
+            <img class="acc" src="./static/img/Image.png" alt="ava">
+            <button class="btn">Add your item</button>
+        </div>
     </div> 
-     
+     <p class="text">Explore</p>
     </header>
 </body>
 </html>
