--- a/tesla.html
+++ b/tesla.html
@@ -22,14 +22,31 @@
             <a class="menu" href="#">Showroom </a>
             <a class="menu" href="#">Credit Simulation</a>
             <a class="menu" href="#">Contact Us</a>
-            <a class="menu" href="#">Page</a>
+            <a class="menu" href="#">
+                Page
+                <img src="./static/img/Vector.png" alt="">
+            </a>
         </nav>
         <div class="btnacc">
             <img class="acc" src="./static/img/Image.png" alt="ava">
             <button class="btn">Add your item</button>
         </div>
     </div> 
-     <p class="text">Explore</p>
+     <p class="text">Credit Simulation</p>
     </header>
+    <main class="main">
+        <p class="home">Home > Credit Simulation</p>
+        <div class="content">
+            <div class="content-left">
+                <div class="video">
+
+                </div>
+                <p>Desciption</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div></div>
+            </div>
+            <div class="content-right"></div>
+        </div>
+    </main>
 </body>
 </html>
