--- a/tesla.html
+++ b/tesla.html
@@ -44,7 +44,7 @@
                 <p class="left-title">Desciption</p>
                 <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <div class="block">
-
+                    
                 </div>
             </div>
             <div class="content-rigth">
@@ -54,7 +54,10 @@
                     <button class="offer-btn">Details</button>
                 </div>
                 <div class="cont">
-
+                    <p class="contact">Contact Dealer</p>
+                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your email">
+                    <input type="text" placeholder="Your messages">
                 </div>
             </div>
         </div>
