--- a/tesla.html
+++ b/tesla.html
@@ -39,7 +39,7 @@
         <div class="content">
             <div class="content-left">
                 <div class="vid">
-                    <img src="./static/img/Group.png" alt="play">
+                    <img class="play" src="./static/img/Group.png" alt="play">
                 </div>
                 <p class="left-title">Desciption</p>
                 <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -55,9 +55,10 @@
                 </div>
                 <div class="cont">
                     <p class="contact">Contact Dealer</p>
-                    <input type="text" placeholder="Your name">
-                    <input type="text" placeholder="Your email">
-                    <input type="text" placeholder="Your messages">
+                    <input class="input" type="text" placeholder="Your name">
+                    <input class="input2" type="text" placeholder="Your email">
+                    <input class="input3" type="text" placeholder="Your messages">
+                    <button class="button">Send Messages</button>
                 </div>
             </div>
         </div>
