--- a/tesla.html
+++ b/tesla.html
@@ -44,7 +44,19 @@
                 <p class="left-title">Desciption</p>
                 <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <div class="block">
-                    
+                    <p class="calcut">Loan Calculator</p>
+                    <p class="text2">What a brand new resource, You can try our resource and explore how it works</p>
+                    <p class="price">Car Price ($)</p>
+                    <input class="input-price" type="text" placeholder="Input your price car">
+                    <p class="interest">Interest Rate (%)</p>
+                    <input class="input-interest" type="text" placeholder="Input your interest rate">
+                    <div class="period-div">
+                        <p class="period">Periode Month</p>
+                        <input class="input-period" type="text" placeholder="Input periode month"> 
+                    </div>
+                    <p class="down">Down Payment ($)</p>
+                    <input class="input-down" type="text" placeholder="Input your down payment">
+                    <button class="calculate">Calculate</button>
                 </div>
             </div>
             <div class="content-rigth">
