--- a/tesla.html
+++ b/tesla.html
@@ -74,6 +74,10 @@
                 </div>
             </div>
         </div>
+        <div class="download">
+            <p class="down-app">Download Our App</p>
+            <img class="phone" src="./static/img/Wireframe.png" alt="phone">
+        </div>
     </main>
 </body>
 </html>
