--- a/tesla.html
+++ b/tesla.html
@@ -74,10 +74,43 @@
                 </div>
             </div>
         </div>
-        <div class="download">
-            <p class="down-app">Download Our App</p>
-            <img class="phone" src="./static/img/Wireframe.png" alt="phone">
-        </div>
     </main>
+    <div class="download">
+        <div class="phone-img">
+            <img class="phone" src="./static/img/iPhone 11 Pro Wireframe.png" alt="phone">
+        </div>
+        <div class="text-down">
+            <p class="down-app">Download Our App</p>
+            <p class="textdownload">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat. 
+            </p>
+            <div class="list">
+                <ul>
+                    <li class="advantageItem">
+                        <img src="./static/img/Checkmark Circle.png">
+                        <p>Best Deals</p>
+                    </li>
+                    <li class="advantageItem">
+                        <img src="./static/img/Checkmark Circle.png">
+                        <p>Sell Your Car</p>
+                    </li>
+                    <li class="advantageItem">
+                        <img src="./static/img/Checkmark Circle.png">
+                        <p>Showroom Events</p>
+                    </li>
+                    <li class="advantageItem">
+                        <img src="./static/img/Checkmark Circle.png">
+                        <p>Car Dealer</p>
+                    </li>
+                    <li class="advantageItem">
+                        <img src="./static/img/Checkmark Circle.png">
+                        <p>Compare Prices</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
