--- a/tesla.html
+++ b/tesla.html
@@ -79,7 +79,7 @@
         <div class="phone-img">
             <img class="phone" src="./static/img/iPhone 11 Pro Wireframe.png" alt="phone">
         </div>
-        <div class="text-down">
+        <div class="download2">
             <p class="down-app">Download Our App</p>
             <p class="textdownload">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -110,6 +110,24 @@
                     </li>
                 </ul>
             </div>
+            <div class="btn-down">
+                <button class="btn-apple">
+                    <p class="apple">Avaible on the</p>
+                    <p class="apple2">App Store</p>
+                </button>
+                <button class="btnn btn-google">
+                    <p class="google">GET IT ON</p>
+                    <p class="google2">Google Play</p>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="WTOR">
+        <p class="WTOR-text">Wanna try our resource?</p>
+        <p class="WTOR-text2">What a brand new resource, You can try our resource and explore how it works</p>
+        <div class="WTOR-btn">
+            <button class="prem">Premium Resource</button>
+            <button class="bomj">Free Resource</button>
         </div>
     </div>
 </body>
