fix (Final save, maybe-_-)

--- a/tesla.html
+++ b/tesla.html
@@ -48,12 +48,16 @@
                     <p class="text2">What a brand new resource, You can try our resource and explore how it works</p>
                     <p class="price">Car Price ($)</p>
                     <input class="input-price" type="text" placeholder="Input your price car">
-                    <p class="interest">Interest Rate (%)</p>
-                    <input class="input-interest" type="text" placeholder="Input your interest rate">
-                    <div class="period-div">
-                        <p class="period">Periode Month</p>
-                        <input class="input-period" type="text" placeholder="Input periode month"> 
-                    </div>
+                    <div class="div-1">
+                        <div class="int-per">
+                            <p class="interest">Interest Rate (%)</p>
+                            <input class="input-interest" type="text" placeholder="Input your interest rate">
+                        </div>
+                        <div class="int-per">
+                            <p class="period">Periode Month</p>
+                            <input class="input-period" type="text" placeholder="Input periode month"> 
+                        </div>
+                    </div> 
                     <p class="down">Down Payment ($)</p>
                     <input class="input-down" type="text" placeholder="Input your down payment">
                     <button class="calculate">Calculate</button>
@@ -128,6 +132,75 @@
         <div class="WTOR-btn">
             <button class="prem">Premium Resource</button>
             <button class="bomj">Free Resource</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-div">
+            <div class="container1">
+                <img class="logo2" src="./static/img/02.png" alt="logo">
+                <p class="ohio">OurStudio is a digital agency
+                    UI / UX Design and Website
+                    Development located in Ohio,
+                    United States of America
+                </p>
+                <p class="copy">Copyright Tanah Air Studio</p>
+            </div>
+            <div class="container2">
+                <p class="comp">Company</p>
+                <ul class="footer-ul">
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Home</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Showroom</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a"  href="#">FAQ</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Blog</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Contact US</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="container3">
+                <p class="comp">Social</p>
+                <ul class="footer-ul">
+                    <li  class="footer-li"">
+                        <a class="footer-a" href="#">Facebook</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Instagram</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Youtube</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Twitter</a>
+                    </li>
+                    <li class="footer-li">
+                        <a class="footer-a" href="#">Linkedln</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="container4">
+                <ul class="footer-ul">
+                    <li class="footer-li">
+                        <img class="footer-img" src="./static/img/Location Map Marker.png" alt="map">
+                        <a class="footer-a" href="#">221 B Santa Monica, Los Angeles</a>
+                    </li>
+                    <li class="footer-li">
+                        <img class="footer-img" src="./static/img/old-phone.png" alt="phone">
+                        <a class="footer-a" href="#">(+1) 923 2341 22</a>
+                    </li>
+                    <li class="footer-li">
+                        <img src="./static/img/email.png" alt="email">
+                        <a class="footer-a" href="#">contact@tanahairstudio.com</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
